fix(styles): apply thin height to horizontal scrollbars

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -33,6 +33,7 @@ html {
 
 ::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 ::-webkit-scrollbar-track {
   background: #09090b;
